--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "moviepy>=2.2.1",
     "python-dotenv>=1.1.1",
     "requests>=2.32.5",
 ]
